--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
-  "name": "vuejs-trello-clone",
+  "name": "trello-clone",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@rails/webpacker": "3.5",
+    "coffeescript": "1.12.7",
+    "vue": "^2.5.17",
+    "vue-loader": "14.2.2",
+    "vue-template-compiler": "^2.5.17"
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "2.11.2"
+  }
 }
